--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 	<head><title>Doggr</title>
 		<link rel="stylesheet" href="index.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -6,7 +6,7 @@
     <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 	</head>
 	<body><h1>Doggr</h1>
-		<p>Hi World</p>
-		<script src="index.js"></script>
+		<div id="root"></div>
+		<script src="index.js" type="text/babel"></script>
 	</body>
 </html>
